--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 	<head>
 		<title>Tetris</title>
 		<link rel="stylesheet" href="style.css" />
-		<script type="text/javascript" src="script.js"></script>
 	</head>
 	<body>
+		<h1>Tetris</h1>
 		<div id="game-wrapper">
-			<div class="piece-wrapper piece-o">
+			<div class="piece-wrapper piece-s">
+				<div class="piece-part part1"></div>
+				<div class="piece-part part2"></div>
+				<div class="piece-part part3"></div>
+				<div class="piece-part part4"></div>
+			</div>
+			<!-- <div class="piece-wrapper piece-o">
 				<div class="piece-part part1"></div>
 				<div class="piece-part part2"></div>
 				<div class="piece-part part3"></div>
@@ -24,13 +30,7 @@
 				<div class="piece-part part2"></div>
 				<div class="piece-part part3"></div>
 				<div class="piece-part part4"></div>
-			</div>
-			<div class="piece-wrapper piece-s">
-				<div class="piece-part part1"></div>
-				<div class="piece-part part2"></div>
-				<div class="piece-part part3"></div>
-				<div class="piece-part part4"></div>
-			</div>
+			</div>			
 			<div class="piece-wrapper piece-z">
 				<div class="piece-part part1"></div>
 				<div class="piece-part part2"></div>
@@ -48,7 +48,9 @@
 				<div class="piece-part part2"></div>
 				<div class="piece-part part3"></div>
 				<div class="piece-part part4"></div>
-			</div>
+			</div> -->
 		</div>
+		
+		<script type="text/javascript" src="script.js"></script>
 	</body>
 </html>
