--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 	<body>
 		<h1>Tetris</h1>
 		<div id="game-wrapper">
-			<div class="piece-wrapper piece-s">
+			<!-- <div class="piece-wrapper piece-s">
 				<div class="piece-part part1"></div>
 				<div class="piece-part part2"></div>
 				<div class="piece-part part3"></div>
 				<div class="piece-part part4"></div>
 			</div>
-			<!-- <div class="piece-wrapper piece-o">
+			<div class="piece-wrapper piece-o">
 				<div class="piece-part part1"></div>
 				<div class="piece-part part2"></div>
 				<div class="piece-part part3"></div>
