Collision detection working but still buggy. PieceFactory working. Lots of changes.

--- a/index.html
+++ b/index.html
@@ -2,55 +2,13 @@
 <html>
 	<head>
 		<title>Tetris</title>
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" type="text/css" href="blockdrop.css" />
+		<script type="text/javascript" src="blockdrop.js" defer></script>
 	</head>
 	<body>
 		<h1>Tetris</h1>
 		<div id="game-wrapper">
-			<!-- <div class="piece-wrapper piece-s">
-				<div class="piece-part part1"></div>
-				<div class="piece-part part2"></div>
-				<div class="piece-part part3"></div>
-				<div class="piece-part part4"></div>
-			</div>
-			<div class="piece-wrapper piece-o">
-				<div class="piece-part part1"></div>
-				<div class="piece-part part2"></div>
-				<div class="piece-part part3"></div>
-				<div class="piece-part part4"></div>
-			</div>
-			<div class="piece-wrapper piece-l">
-				<div class="piece-part part1"></div>
-				<div class="piece-part part2"></div>
-				<div class="piece-part part3"></div>
-				<div class="piece-part part4"></div>
-			</div>
-			<div class="piece-wrapper piece-j">
-				<div class="piece-part part1"></div>
-				<div class="piece-part part2"></div>
-				<div class="piece-part part3"></div>
-				<div class="piece-part part4"></div>
-			</div>			
-			<div class="piece-wrapper piece-z">
-				<div class="piece-part part1"></div>
-				<div class="piece-part part2"></div>
-				<div class="piece-part part3"></div>
-				<div class="piece-part part4"></div>
-			</div>
-			<div class="piece-wrapper piece-t">
-				<div class="piece-part part1"></div>
-				<div class="piece-part part2"></div>
-				<div class="piece-part part3"></div>
-				<div class="piece-part part4"></div>
-			</div>
-			<div class="piece-wrapper piece-i">
-				<div class="piece-part part1"></div>
-				<div class="piece-part part2"></div>
-				<div class="piece-part part3"></div>
-				<div class="piece-part part4"></div>
-			</div> -->
+			<!-- Game will be loaded here -->
 		</div>
-		
-		<script type="text/javascript" src="script.js"></script>
 	</body>
 </html>
