--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Tetris</title>
+		<title>BlockDrop</title>
+		<link rel="shortcut icon" type="image/png" href="favicon.png" />
 		<link rel="stylesheet" type="text/css" href="blockdrop.css" />
 		<script type="text/javascript" src="blockdrop.js" defer></script>
 	</head>
 	<body>
-		<h1>Tetris</h1>
+		<h1>BlockDrop</h1>
 		<div id="game-wrapper">
 			<!-- Game will be loaded here -->
 		</div>
