Block drop & rotation working. Line clearing working. Rotation still buggy. No gamification (scores, end-game, etc.)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<script type="text/javascript" src="blockdrop.js" defer></script>
 	</head>
 	<body>
-		<h1>BlockDrop</h1>
+		<!-- <h1>BlockDrop</h1> -->
 		<div id="game-wrapper">
 			<!-- Game will be loaded here -->
 		</div>
