--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 	<head>
 		<title>BlockDrop</title>
 		<link rel="shortcut icon" type="image/png" href="favicon.png" />
-		<link rel="stylesheet" type="text/css" href="blockdrop.css" />
-		<script type="text/javascript" src="blockdrop.js" defer></script>
+		<link rel="stylesheet" type="text/css" href="css/fonts.css" charset="utf-8" />
+		<link rel="stylesheet" type="text/css" href="css/blockdrop.css" />
+		<script type="text/javascript" src="js/blockdrop.js" defer></script>
 	</head>
 	<body>
 		<!-- <h1>BlockDrop</h1> -->
 		<div id="game-wrapper">
 			<!-- Game will be loaded here -->
+			<div id="game-board"></div>
+			<div id="game-info">
+				<div id="game-score"><span class="title">Score:</span> <span class="value">0</span></div>
+				<div id="game-level"><span class="title">Level:</span> <span class="value">1</span></div>
+			</div>
 		</div>
 	</body>
 </html>
