--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<title>BlockDrop</title>
 		<link rel="shortcut icon" type="image/png" href="favicon.png" />
-		<!--<link rel="stylesheet" type="text/css" href="css/fonts.css" charset="utf-8" />-->
-		<link href='http://fonts.googleapis.com/css?family=Roboto:900,100,400' rel='stylesheet' type='text/css'>
+		<!--<link href='http://fonts.googleapis.com/css?family=Roboto:900,100,400' rel='stylesheet' type='text/css'>-->
+		<link rel="stylesheet" type="text/css" href="css/fonts.css" />
 		<link rel="stylesheet" type="text/css" href="css/blockdrop.css" />
 		<script type="text/javascript" src="js/blockdrop.js"></script>
 	</head>
