Working start/pause/resume buttons

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 		<script type="text/javascript" src="js/blockdrop.js"></script>
 	</head>
 	<body>
-		<div id="game-wrapper">
-			<!-- Game will be loaded here -->
-		</div>
+		<!-- <div id="game-target">
+			<!-- Game will be loaded here
+		</div> -->
 		
 		<script type="text/javascript" defer>
-			var targetElement = document.getElementById("game-wrapper");
-			var Tetris = new BlockDropGame(targetElement);
+			//var targetElement = document.getElementById("game-target");
+			var Tetris = new BlockDropGame(/* targetElement */);
 		</script>
 	</body>
 </html>
