Fixed browser compatibility issues.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<!-- <div id="game-target">
-			<!-- Game will be loaded here
+			Game will be loaded here
 		</div> -->
 		
 		<script type="text/javascript" defer>
