--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html manifest="cache.manifest">
+<html manifest=".appcache">
 	<head>
 		<title>BlockDrop</title>
 		<link rel="shortcut icon" type="image/png" href="favicon.png" />
-		<link href='http://fonts.googleapis.com/css?family=Roboto:100,400,900' rel='stylesheet' type='text/css'>
-		<!--<link rel="stylesheet" type="text/css" href="css/fonts.css" />-->
+		<link rel="stylesheet" type="text/css" href="css/fonts.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/blockdrop.css" />
 		<script type="text/javascript" src="js/blockdrop.js"></script>
 	</head>
