--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>BlockDrop</title>
 		<link rel="shortcut icon" type="image/png" href="favicon.png" />
-		<link rel="stylesheet" type="text/css" href="css/fonts.min.css" />
+		<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,900' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="css/blockdrop.css" />
 		<script type="text/javascript" src="js/blockdrop.js"></script>
 	</head>
