--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="manifest.webapp">
+<html manifest="manifest.appcache">
 	<head>
 		<title>BlockDrop</title>
 		<link rel="shortcut icon" type="image/png" href="favicon.png" />
