--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>BlockDrop</title>
 		<link rel="shortcut icon" type="image/png" href="favicon.png" />
 		<link rel="stylesheet" type="text/css" href="css/fonts.min.css" />
+		<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/blockdrop.css" />
 		<script type="text/javascript" src="js/blockdrop.js"></script>
 	</head>
