--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 	<head>
 		<title>BlockDrop</title>
 		<link rel="shortcut icon" type="image/png" href="favicon.png" />
-		<!--<link rel="stylesheet" type="text/css" href="css/fonts.min.css" />
-		<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
+		<!-- <link rel="stylesheet" type="text/css" href="css/fonts.css" />
+		<link rel="stylesheet" type="text/css" href="css/font-awesome.css" />
 		<link rel="stylesheet" type="text/css" href="css/blockdrop.css" />
-		<script type="text/javascript" src="js/blockdrop.js"></script>-->
-		<link rel="stylesheet" type="text/css" href="css/blockdrop.min.css" /> 
+		<script type="text/javascript" src="js/blockdrop.js"></script> -->
+		<link rel="stylesheet" type="text/css" href="css/blockdrop.min.css" />
 		<script type="text/javascript" src="js/blockdrop.min.js"></script>
 	</head>
 	<body>
