--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>BlockDrop</title>
 		<link rel="shortcut icon" type="image/png" href="favicon.png" />
+        <meta name="viewport" content="user-scalable=no, initial-scale=0.1, width=device-width" />
 
         <!-- build:css css/vendor.min.css -->
         <link rel="stylesheet" type="text/css" href="components/font-awesome/css/font-awesome.css" />
