--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="manifest.appcache">
+<html>
 	<head>
 		<title>BlockDrop</title>
 		<link rel="shortcut icon" type="image/png" href="favicon.png" />
